--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "daves",
-    "displayName": "daves",
-    "description": "daves theme",
-    "version": "0.0.1",
+    "name": "DevOps",
+    "displayName": "DevOps",
+    "description": "DevOps Theme",
+    "version": "1.0.0",
     "publisher": "dblooman",
     "engines": {
         "vscode": "^1.17.0"
@@ -11,12 +11,10 @@
         "Themes"
     ],
     "contributes": {
-        "themes": [
-            {
-                "label": "Daves Theme",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Daves.json"
-            }
-        ]
+        "themes": [{
+            "label": "DevOps Theme",
+            "uiTheme": "vs-dark",
+            "path": "./themes/devops.json"
+        }]
     }
 }
